[Presentation API] Throw NotAllowedError instead of AbortError when user closes MR dialog

To fix web platform test: http://w3c-test.org/presentation-api/controlling-ua/startNewPresentation_displaynotallowed-manual.html

According to spec, reject promise with "NotAllowedError" if user denies permission to use a display (Step 12: https://w3c.github.io/presentation-api/#dfn-start-a-presentation-connection)

BUG=669273

Review-Url: https://codereview.chromium.org/2533073002
Cr-Commit-Position: refs/heads/master@{#435399}

Former-commit-id: 942907a6114aadcf231cb66bd72fdaa16eacc583